@@ -1,4 +1,5 @@
 19 Jul 2018
+fix: direct link to post button
 fix: latest comments poster not using url_proxy
 fix: removal of background
 
